# my-arducam

./: CMakeLists.txt  Kconfig  README.md  ReadMe.md
drivers/video/: CMakeLists.txt  Kconfig
drivers/video/arducam_mega/: CMakeLists.txt  Kconfig  arducam_mega.c
dts/bindings/video/: arducam,mega.yaml
include/drivers/: video.h
samples/drivers/video/arducam_mega/: CMakeLists.txt  prj.conf  sample.yaml
samples/drivers/video/arducam_mega/boards/: nrf5340dk_nrf5340_cpuapp_ns.conf  nrf5340dk_nrf5340_cpuapp_ns.overlay
samples/drivers/video/arducam_mega/src/: main.c
zephyr/: module.yml
